fix button spacing for mobile

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -157,6 +157,10 @@ p {
         padding: 0 4rem;
     }
 
+    .project-button {
+        margin-top: .6rem;
+    }
+
     //  a,
     //  a:active,
     //  a:visited {
@@ -205,7 +209,7 @@ p {
 }
 
 .thumbnail-description {
-    margin: 3rem 0;
+    margin: 2.5rem 0;
 }
 
 // .projects {
